--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,7 +23,7 @@
        <p><strong>Manufacturer : </strong>{{item.specs.manufacturer}}</p>
        <p><strong>Storage      : </strong>{{item.specs.storage}} &nbsp;GB</p>
        <p><strong>OS           : </strong>{{item.specs.os}}</p>
-      <p><strong>Camera        : </strong>{{item.specs.camera}} &nbsp; Mpx</p>
+      <p><strong>Camera        : </strong>{{item.specs.camera}} &nbsp; MP</p>
 
      </md-card-content>
 <md-divider></md-divider>
