--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
    <md-button ng-click="toggleLeft()" class="md-icon-button" aria-label="sidebar">
      <i class="material-icons">menu</i>
    </md-button>
-    <strong class="text">Single Page App Without A Framework</strong>
+    <strong class="text">Single Page Mobile App</strong>
         <span flex></span>
 
           <md-button ng-click="toggleRight()" class="md-raised btn"  aria-label="sidebarRightSide">
